fixed punch alignment

--- a/exhib2-styles.css
+++ b/exhib2-styles.css
@@ -70,6 +70,7 @@ p.quote-author {
 #punch{
     font-family: 'Garamond', serif;
     font-size: 1.2em;
+    text-align: center;
 }
 
 h3 {
